fix formatting in story list

--- a/stories/eo/0302_fajro.html
+++ b/stories/eo/0302_fajro.html
@@ -56,14 +56,14 @@ Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br>Esperanto</div><
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/03.jpg" /></p>
 
-<p>La fajro brulas.</p>
+<p>Fajro brulas.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/04.jpg" /></p>
 
-<p>La fajro kuiras.</p>
+<p>Fajro kuiras.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -91,7 +91,7 @@ Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br>Esperanto</div><
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/08.jpg" /></p>
 
-<p>La fajro estas nekredebla.</p>
+<p>Fajro estas nekredebla.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
