--- a/stories/no/0141_hønemor-og-tusenbein_slides.html
+++ b/stories/no/0141_hønemor-og-tusenbein_slides.html
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="fajro" class="slide level1">
-<h1>Fajro</h1>
+<section id="hønemor-og-tusenbein" class="slide level1">
+<h1>Hønemor og Tusenbein</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/02.jpg" /></p>
-<p>Rigardu, fajro!</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/02.jpg" /></p>
+<p>Hønemor og Tusenbein var venner. Men de likte alltid å konkurrere. En dag spilte de fotball for å se hvem som var den beste på banen.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/03.jpg" /></p>
-<p>Fajro brulas.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/03.jpg" /></p>
+<p>De dro til fotballbanen og startet kampen. Hønemor var rask men Tusenbein var raskere. Hønemor sparket langt men Tusenbein sparket lengre. Hønemor ble surere og surere.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/04.jpg" /></p>
-<p>Fajro kuiras.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/04.jpg" /></p>
+<p>Så lagde de en straffekonkurranse. Først var Tusenbein keeper. Hønemor skårte bare ett mål. Så var det Hønemors tur til å forsvare målet.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/05.jpg" /></p>
-<p>Fajro varmigas.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/05.jpg" /></p>
+<p>Tusenbein sparket ballen og skårte. Tusenbein driblet ballen og skårte. Tusenbein headet ballen og skårte. Fem mål skårte Tusenbein.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/06.jpg" /></p>
-<p>Fajro lumigas.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/06.jpg" /></p>
+<p>Hønemor ble sint fordi hun tapte. Hun var en veldig dårlig taper. Tusenbein begynte å le av vennen som lagde så mye bråk.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/07.jpg" /></p>
-<p>Rigardu, fajro!</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/07.jpg" /></p>
+<p>Hønemor var så sint at hun åpnet nebbet og slukte Tusenbein.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/08.jpg" /></p>
-<p>Fajro estas nekredebla.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/08.jpg" /></p>
+<p>Da Hønemor gikk hjemover møtte hun Mor Tusenbein. &quot;Har du sett barnet mitt?&quot; spurte Mor Tusenbein. Hønemor sa ikke noe. Mor Tusenbein ble urolig.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/09.jpg" /></p>
-<p>Kaj ĝi estas pova.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/09.jpg" /></p>
+<p>Så hørte Mor Tusenbein en svak stemme: &quot;Mamma, hjelp meg!&quot;. Mor Tusenbein så seg rundt og lyttet spent.<br />Lyden kom fra inni høna.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,12 +168,48 @@
 </section>
 <section class="slide level1">
 
-<h2 id="fajro-1">Fajro</h2>
-<strong>Teksto:</strong> Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br> <strong>Ilustrado:</strong> Rob Owen<br> <strong>Tradukado:</strong> Espen Stranger-Johannessen<br> <strong>Lingvo:</strong> Esperanto<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/10.jpg" /></p>
+<p>Mor Tusenbein ropte: &quot;Bruk det trikset du kan, barnet mitt!&quot;. Tusenbein kan lage dårlig lukt selv og en sånn fæl smak. Hønemor kjente hun ble dårlig.</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/11.jpg" /></p>
+<p>Hønemor kastet opp. Og svelget og spyttet. Så nøs og hostet hun. Og kastet opp. Tusenbeinet var ufyselig.</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/12.jpg" /></p>
+<p>Hønemor hostet til hun kastet opp tusenbeinet som var i magen. Mor Tusenbein og barnet hennes klatret opp i et tre for å gjemme seg.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/13.jpg" /></p>
+<p>Siden den tid har høner og tusenbein vært fiender.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="hønemor-og-tusenbein-1">Hønemor og Tusenbein</h2>
+<strong>Tekst:</strong> Winny Asara<br> <strong>Illustrasjoner:</strong> Winny Asara<br> <strong>Oversettelse:</strong> Finn Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
 <p>
-This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
+Denne fortellingen kommer fra <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, som jobber med å oversette fortellingene fra <a href='http://africanstorybook.org/'>African Storybook Project</a> til alle verdens språk.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/fire'>here</a>
+Du kan se den originale fortellingen på ASP-websida <a href='http://my.africanstorybook.org/stories/chicken-and-millipede'>her</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
