--- a/stories/eo/0073_nombri-bestojn.html
+++ b/stories/eo/0073_nombri-bestojn.html
@@ -56,21 +56,21 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Esperanto</div><div class="p
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0073/03.jpg" /></p>
 
-<p>Do ĝirafoj iris trinki akvon.</p>
+<p>Du ĝirafoj iris trinki akvon.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0073/04.jpg" /></p>
 
-<p>Jen tri bizonoj kaj tri birdoj. Ili esas ĉiuj survoje por trinki akvon.</p>
+<p>Jen tri bizonoj kaj tri birdoj. Ili estas ĉiuj survoje por trinki akvon.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0073/05.jpg" /></p>
 
-<p>Kvar impaloj kaj do verukaproj iras trinki akvon.</p>
+<p>Kvar impaloj kaj du verukaproj iras trinki akvon.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
