--- a/stories/fa/0223_حیوانات-اهلی_slides.html
+++ b/stories/fa/0223_حیوانات-اهلی_slides.html
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="lernejaj-vestaĵoj" class="slide level1">
-<h1>Lernejaj vestaĵoj</h1>
+<section id="حیوانات-اهلی" class="slide level1">
+<h1>حیوانات اهلی</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0223/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/02.jpg" /></p>
-<p>Ĉi tiu robo estas longa.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0223/02.jpg" /></p>
+<p>.بن از حیوانات نگهداری می‌کند</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/03.jpg" /></p>
-<p>Ĉi tiu pulovero estas granda.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0223/03.jpg" /></p>
+<p>.این یک گاو است</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/04.jpg" /></p>
-<p>Ĉi tiu sako estas granda.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0223/04.jpg" /></p>
+<p>.این یک بز است</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/05.jpg" /></p>
-<p>Ĉi tiu zono estas...</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0223/05.jpg" /></p>
+<p>.این یک اسب است</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/06.jpg" /></p>
-<p>Ĉi tiu ĉapelo estas malgranda.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0223/06.jpg" /></p>
+<p>.این یک خوک است</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/07.jpg" /></p>
-<p>Ĉi tiuj ŝtrumpoj estas mallongaj.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0223/07.jpg" /></p>
+<p>.این یک مرغ است</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/08.jpg" /></p>
-<p>Sed ĉi tiuj ŝuoj estas novaj.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0223/08.jpg" /></p>
+<p>.این یک سگ است</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/09.jpg" /></p>
-<p>...kaj ili ĝuste grandas.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0223/09.jpg" /></p>
+<p>.کشاورز شیر حمل می‌کند</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,12 +168,12 @@
 </section>
 <section class="slide level1">
 
-<h2 id="lernejaj-vestaĵoj-1">Lernejaj vestaĵoj</h2>
-<strong>Teksto:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Ilustrado:</strong> Mlungisi Dlamini, Anonymous<br> <strong>Tradukado:</strong> dohliam<br> <strong>Lingvo:</strong> Esperanto<br>
+<h2 id="حیوانات-اهلی-1">حیوانات اهلی</h2>
+<strong>Text:</strong> Jenny Katz<br> <strong>Illustrations:</strong> Sandy Campbell<br> <strong>Translation:</strong> Saeed Nazari<br> <strong>Language:</strong> Persian<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/school-clothes'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/domestic-animals'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
