--- a/stories/gu/0309_નાનુ-અને-મોટુ_slides.html
+++ b/stories/gu/0309_નાનુ-અને-મોટુ_slides.html
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="lernejaj-vestaĵoj" class="slide level1">
-<h1>Lernejaj vestaĵoj</h1>
+<section id="નન-અન-મટ" class="slide level1">
+<h1>નાનુ અને મોટુ</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/02.jpg" /></p>
-<p>Ĉi tiu robo estas longa.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/02.jpg" /></p>
+<p>નાનિ ટોપિ, મોટિ ટોપિ.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,7 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/03.jpg" /></p>
-<p>Ĉi tiu pulovero estas granda.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/03.jpg" /></p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +113,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/04.jpg" /></p>
-<p>Ĉi tiu sako estas granda.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/04.jpg" /></p>
+<p>નાના હાથ, મોટા હાથ.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +122,7 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/05.jpg" /></p>
-<p>Ĉi tiu zono estas...</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/05.jpg" /></p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +130,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/06.jpg" /></p>
-<p>Ĉi tiu ĉapelo estas malgranda.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/06.jpg" /></p>
+<p>નાનિ બક્રિ, મોટિ બક્રિ.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +139,7 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/07.jpg" /></p>
-<p>Ĉi tiuj ŝtrumpoj estas mallongaj.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/07.jpg" /></p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +147,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/08.jpg" /></p>
-<p>Sed ĉi tiuj ŝuoj estas novaj.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/08.jpg" /></p>
+<p>નાનિ કિતાબ, મોટિ કિતાબ.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +156,7 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/09.jpg" /></p>
-<p>...kaj ili ĝuste grandas.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/09.jpg" /></p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,12 +164,38 @@
 </section>
 <section class="slide level1">
 
-<h2 id="lernejaj-vestaĵoj-1">Lernejaj vestaĵoj</h2>
-<strong>Teksto:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Ilustrado:</strong> Mlungisi Dlamini, Anonymous<br> <strong>Tradukado:</strong> dohliam<br> <strong>Lingvo:</strong> Esperanto<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/10.jpg" /></p>
+<p>નાનિ સ્મિતા, મોટિ સ્મિતા.</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/11.jpg" /></p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0309/12.jpg" /></p>
+<p>સમાપ્તિ.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="નન-અન-મટ-1">નાનુ અને મોટુ</h2>
+<strong>Text:</strong> Carole Bloch<br> <strong>Illustrations:</strong> Vian Oelofsen<br> <strong>Translation:</strong> Darshan Soni<br> <strong>Language:</strong> Gujarati<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/school-clothes'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/little-and-big'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
