--- a/stories/index.html
+++ b/stories/index.html
@@ -878,6 +878,12 @@
       <td><a name="gu0007"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0008</td>
+      <td><a href="/stories/gu/0008_તુ-શુ-કરે-છે_slides.html" target="_blank">તુ શુ કરે છે?</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="gu0008"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0049</td>
       <td><a href="/stories/gu/0049_મેઘધનુષ્ય_slides.html" target="_blank">મેઘધનુષ્ય</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -888,6 +894,12 @@
       <td><a href="/stories/gu/0093_મારો-બાબ્લો_slides.html" target="_blank">મારો બાબ્લો</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="gu0093"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0098</td>
+      <td><a href="/stories/gu/0098_ગાય-મારો-મિત્ર-છે_slides.html" target="_blank">ગાય મારો મિત્ર છે.</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="gu0098"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0127</td>
@@ -908,16 +920,40 @@
       <td><a name="gu0192"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0223</td>
+      <td><a href="/stories/gu/0223_ઘર-ના-પ્રાણિઓ_slides.html" target="_blank">ઘર ના પ્રાણિઓ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="gu0223"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0253</td>
       <td><a href="/stories/gu/0253_મારી-ચિત્ર-કિતાબ-_slides.html" target="_blank">મારી ચિત્ર કિતાબ </a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="gu0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0271</td>
+      <td><a href="/stories/gu/0271_બે_slides.html" target="_blank">બે</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="gu0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0302</td>
       <td><a href="/stories/gu/0302_આગ_slides.html" target="_blank">આગ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="gu0302"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0309</td>
+      <td><a href="/stories/gu/0309_નાનુ-અને-મોટુ_slides.html" target="_blank">નાનુ અને મોટુ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="gu0309"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0341</td>
+      <td><a href="/stories/gu/0341_આનટોનિ-કે-બો-માંગ-બલે_slides.html" target="_blank">આનટોનિ કે બો માંગ બલે</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="gu0341"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
@@ -1434,7 +1470,7 @@
     </tr>
     <tr>
       <td>0008</td>
-      <td><a href="/stories/fa/0008_عنوان-چه-کار-داری-میکنی‌_slides.html" target="_blank">عنوان: چه کار داری میکنی‌؟</a></td>
+      <td><a href="/stories/fa/0008_چه-کار-داری-میکنی‌_slides.html" target="_blank">چه کار داری میکنی‌؟</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2pENEl5NXA3bGM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="fa0008"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
@@ -1470,7 +1506,7 @@
     </tr>
     <tr>
       <td>0223</td>
-      <td><a href="/stories/fa/0223_عنوان-حیوانات-اهلی_slides.html" target="_blank">عنوان: حیوانات اهلی</a></td>
+      <td><a href="/stories/fa/0223_حیوانات-اهلی_slides.html" target="_blank">حیوانات اهلی</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsQ2pENEl5NXA3bGM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="fa0223"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
@@ -1581,6 +1617,12 @@
       <td><a href="/stories/es/0253_mi-libro-ilustrado_slides.html" target="_blank">Mi libro ilustrado</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9Esbsd0ZxRnBQdWdwZlE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="es0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0302</td>
+      <td><a href="/stories/es/0302_el-fuego_slides.html" target="_blank">El fuego</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9Esbsd0ZxRnBQdWdwZlE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="es0302"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0327</td>
@@ -1737,7 +1779,7 @@
       <td>0008</td>
       <td><a href="http://my.africanstorybook.org/stories/what-are-you-doing">What are you doing?</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#da0008">da</a>, <a href="#de0008">de</a>, <a href="#eo0008">eo</a>, <a href="#es0008">es</a>, <a href="#fa0008">fa</a>, <a href="#ja0008">ja</a>, <a href="#jam0008">jam</a>, <a href="#nn0008">nn</a>, <a href="#no0008">no</a>, <a href="#yue0008">yue</a>, <a href="#zh0008">zh</a></td>
+      <td><a href="#da0008">da</a>, <a href="#de0008">de</a>, <a href="#eo0008">eo</a>, <a href="#es0008">es</a>, <a href="#fa0008">fa</a>, <a href="#gu0008">gu</a>, <a href="#ja0008">ja</a>, <a href="#jam0008">jam</a>, <a href="#nn0008">nn</a>, <a href="#no0008">no</a>, <a href="#yue0008">yue</a>, <a href="#zh0008">zh</a></td>
     </tr>
     <tr>
       <td>0009</td>
@@ -1839,7 +1881,7 @@
       <td>0098</td>
       <td><a href="http://my.africanstorybook.org/stories/cow-my-friend">A cow is my friend</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#zh0098">zh</a></td>
+      <td><a href="#gu0098">gu</a>, <a href="#zh0098">zh</a></td>
     </tr>
     <tr>
       <td>0112</td>
@@ -1989,7 +2031,7 @@
       <td>0223</td>
       <td><a href="http://my.africanstorybook.org/stories/domestic-animals">Domestic animals</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#fa0223">fa</a>, <a href="#zh0223">zh</a></td>
+      <td><a href="#fa0223">fa</a>, <a href="#gu0223">gu</a>, <a href="#zh0223">zh</a></td>
     </tr>
     <tr>
       <td>0231</td>
@@ -2019,7 +2061,7 @@
       <td>0271</td>
       <td><a href="http://my.africanstorybook.org/stories/two">Two</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#nn0271">nn</a>, <a href="#no0271">no</a>, <a href="#yue0271">yue</a>, <a href="#zh0271">zh</a></td>
+      <td><a href="#gu0271">gu</a>, <a href="#nn0271">nn</a>, <a href="#no0271">no</a>, <a href="#yue0271">yue</a>, <a href="#zh0271">zh</a></td>
     </tr>
     <tr>
       <td>0287</td>
@@ -2037,7 +2079,7 @@
       <td>0302</td>
       <td><a href="http://my.africanstorybook.org/stories/fire">Fire</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#eo0302">eo</a>, <a href="#fa0302">fa</a>, <a href="#gu0302">gu</a>, <a href="#nn0302">nn</a>, <a href="#no0302">no</a>, <a href="#zh0302">zh</a></td>
+      <td><a href="#eo0302">eo</a>, <a href="#es0302">es</a>, <a href="#fa0302">fa</a>, <a href="#gu0302">gu</a>, <a href="#nn0302">nn</a>, <a href="#no0302">no</a>, <a href="#zh0302">zh</a></td>
     </tr>
     <tr>
       <td>0306</td>
@@ -2049,7 +2091,7 @@
       <td>0309</td>
       <td><a href="http://my.africanstorybook.org/stories/little-and-big">Little and big</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#aeb0309">aeb</a>, <a href="#fa0309">fa</a>, <a href="#yue0309">yue</a>, <a href="#zh0309">zh</a></td>
+      <td><a href="#aeb0309">aeb</a>, <a href="#fa0309">fa</a>, <a href="#gu0309">gu</a>, <a href="#yue0309">yue</a>, <a href="#zh0309">zh</a></td>
     </tr>
     <tr>
       <td>0313</td>
@@ -2080,6 +2122,12 @@
       <td><a href="http://my.africanstorybook.org/stories/children-wax">Children of wax</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
       <td><a href="#nn0337">nn</a>, <a href="#no0337">no</a></td>
+    </tr>
+    <tr>
+      <td>0341</td>
+      <td><a href="http://my.africanstorybook.org/stories/antoni-ke-bo-mang-bale-0">Antoni ke bo mang bale</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="#gu0341">gu</a></td>
     </tr>
     <tr>
       <td>0359</td>
