--- a/stories/eo/0003_lernejaj-vestaĵoj.html
+++ b/stories/eo/0003_lernejaj-vestaĵoj.html
@@ -84,7 +84,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Esperanto</div><div class="p
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/07.jpg" /></p>
 
-<p>Ĉi tiuj ŝtrumpoj estas mallonga.</p>
+<p>Ĉi tiuj ŝtrumpoj estas mallongaj.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
