--- a/stories/eo/0006_anansi_kaj_saĝeco_slides.html
+++ b/stories/eo/0006_anansi_kaj_saĝeco_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/04.jpg" /></p>
-<p>Avida Anansi pensis, “mi tenos la kruĉon ĉe la supro de alta arbo. Tiam mi povas havi ĉion al mi mem!” Li ŝpinis longan fadenon, bobenis ĝin ĉirkaŭ la argilan kruĉon kaj ligis ĝin al lia stomako. Li komencis grimpi la arbon. Sed estis malfacile grimpi la arbon kun la kruĉo frapanta liajn genuojn la tutan tempon.</p>
+<p>Avida Anansi pensis, “mi tenos la kruĉon ĉe la supro de alta arbo. Tiel mi povas havi ĉion al mi mem!” Li ŝpinis longan fadenon, bobenis ĝin ĉirkaŭ la argilan kruĉon kaj ligis ĝin al sia stomako. Li komencis grimpi la arbon. Sed estis malfacile grimpi la arbon kun la kruĉo frapanta liajn genuojn la tutan tempon.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/05.jpg" /></p>
-<p>La tutan tempon la juna filo de Anansi estis observado ĉe la fundo de la arbo. Li diris, “Ĉu ĝi ne estus pli facile grimpi se vi anstataŭe ligus la kruĉon al via dorso?” Anansi provis ligi la argilan kruĉon plena de saĝeco al lia dorso, kaj ĝi vere estis multe pli facila.</p>
+<p>La tutan tempon la juna filo de Anansi estis observanta ĉe la fundo de la arbo. Li diris, “Ĉu ne estus pli facile grimpi se vi anstataŭe ligus la kruĉon al via dorso?” Anansi provis ligi la argilan kruĉon plena de saĝeco al sia dorso, kaj tio vere estis multe pli facile.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/06.jpg" /></p>
-<p>En neniu tempo li atingis la supron de la arbo. Sed tiam li haltis pensante, “mi estas supozeble la unua kun ĉio saĝeco kaj ĉi tie mia filo estis pli lerta ol mi!” Anansi estis tiel kolera pri tio ĉi ke li ĵetis la argilan kruĉon malsupren ekstere de la arbo.</p>
+<p>En neniu tempo li atingis la supron de la arbo. Sed tiam li haltis pensante, “mi estas supozeble la ununura kun ĉio saĝeco sed jen mia filo estis pli lerta ol mi!” Anansi estis tiel kolera pri tio ĉi ke li ĵetis la argilan kruĉon malsupren for de la arbo.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/07.jpg" /></p>
-<p>Ĝi frakasis en pecoj sur la tero. La saĝeco estis libera por dividi inter ĉiuj. Kaj estas tiel kiel homoj lernis farmi, teksi tukojn, fari ferajn ilojn kaj ĉiujn la aliajn aferojn ke homoj scias fari.</p>
+<p>Ĝi frakasis en pecoj sur la tero. La saĝeco estis libera por dividi inter ĉiuj. Kaj estas tiel kiel homoj lernis farmi, teksi tukojn, fari ferajn ilojn, kaj ĉiujn la aliajn aferojn kiujn homoj scias fari.</p>
 <center>
 <strong>6</strong>
 </center>
