--- a/stories/eo/0073_nombri-bestojn_slides.html
+++ b/stories/eo/0073_nombri-bestojn_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0073/03.jpg" /></p>
-<p>Do ĝirafoj iris trinki akvon.</p>
+<p>Du ĝirafoj iris trinki akvon.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0073/04.jpg" /></p>
-<p>Jen tri bizonoj kaj tri birdoj. Ili esas ĉiuj survoje por trinki akvon.</p>
+<p>Jen tri bizonoj kaj tri birdoj. Ili estas ĉiuj survoje por trinki akvon.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0073/05.jpg" /></p>
-<p>Kvar impaloj kaj do verukaproj iras trinki akvon.</p>
+<p>Kvar impaloj kaj du verukaproj iras trinki akvon.</p>
 <center>
 <strong>4</strong>
 </center>
