--- a/stories/gu/0008_તુ-શુ-કરે-છે_slides.html
+++ b/stories/gu/0008_તુ-શુ-કરે-છે_slides.html
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="lernejaj-vestaĵoj" class="slide level1">
-<h1>Lernejaj vestaĵoj</h1>
+<section id="ત-શ-કર-છ" class="slide level1">
+<h1>તુ શુ કરે છે?</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/02.jpg" /></p>
-<p>Ĉi tiu robo estas longa.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/02.jpg" /></p>
+<p>હું ગાવુ છુ.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/03.jpg" /></p>
-<p>Ĉi tiu pulovero estas granda.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/03.jpg" /></p>
+<p>તે તરંગ કરે છે.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/04.jpg" /></p>
-<p>Ĉi tiu sako estas granda.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/04.jpg" /></p>
+<p>હું તાડિ પાડુ છુ.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/05.jpg" /></p>
-<p>Ĉi tiu zono estas...</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/05.jpg" /></p>
+<p>તે ઉંચૈ કરે છે.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/06.jpg" /></p>
-<p>Ĉi tiu ĉapelo estas malgranda.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/06.jpg" /></p>
+<p>તે બોલાવે છે.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/07.jpg" /></p>
-<p>Ĉi tiuj ŝtrumpoj estas mallongaj.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/07.jpg" /></p>
+<p>હું જવાબ આપુ છુ.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/08.jpg" /></p>
-<p>Sed ĉi tiuj ŝuoj estas novaj.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/08.jpg" /></p>
+<p>તે સામ્ભ્રે છે.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/09.jpg" /></p>
-<p>...kaj ili ĝuste grandas.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/09.jpg" /></p>
+<p>તુ શુ કરે છે?</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,18 +168,18 @@
 </section>
 <section class="slide level1">
 
-<h2 id="lernejaj-vestaĵoj-1">Lernejaj vestaĵoj</h2>
-<strong>Teksto:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Ilustrado:</strong> Mlungisi Dlamini, Anonymous<br> <strong>Tradukado:</strong> dohliam<br> <strong>Lingvo:</strong> Esperanto<br>
+<h2 id="ત-શ-કર-છ-1">તુ શુ કરે છે?</h2>
+<strong>Text:</strong> Nina Orange<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Darshan Soni<br> <strong>Language:</strong> Gujarati<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/school-clothes'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/what-are-you-doing'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
 
