--- a/stories/gu/0271_બે_slides.html
+++ b/stories/gu/0271_બે_slides.html
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="lernejaj-vestaĵoj" class="slide level1">
-<h1>Lernejaj vestaĵoj</h1>
+<section id="બ" class="slide level1">
+<h1>બે</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/02.jpg" /></p>
-<p>Ĉi tiu robo estas longa.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/02.jpg" /></p>
+<p>બે નાના હાથ, પકડવા માટે.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,7 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/03.jpg" /></p>
-<p>Ĉi tiu pulovero estas granda.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/03.jpg" /></p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +113,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/04.jpg" /></p>
-<p>Ĉi tiu sako estas granda.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/04.jpg" /></p>
+<p>બે નાના પગ, કુદકા માર્વા માટે.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +122,7 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/05.jpg" /></p>
-<p>Ĉi tiu zono estas...</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/05.jpg" /></p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +130,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/06.jpg" /></p>
-<p>Ĉi tiu ĉapelo estas malgranda.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/06.jpg" /></p>
+<p>બે નાના આંખ, જોવા માટે.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +139,7 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/07.jpg" /></p>
-<p>Ĉi tiuj ŝtrumpoj estas mallongaj.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/07.jpg" /></p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +147,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/08.jpg" /></p>
-<p>Sed ĉi tiuj ŝuoj estas novaj.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/08.jpg" /></p>
+<p>બે નાના કાન, સમભ્રાવા માટે.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +156,7 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/09.jpg" /></p>
-<p>...kaj ili ĝuste grandas.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/09.jpg" /></p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,12 +164,29 @@
 </section>
 <section class="slide level1">
 
-<h2 id="lernejaj-vestaĵoj-1">Lernejaj vestaĵoj</h2>
-<strong>Teksto:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Ilustrado:</strong> Mlungisi Dlamini, Anonymous<br> <strong>Tradukado:</strong> dohliam<br> <strong>Lingvo:</strong> Esperanto<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/10.jpg" /></p>
+<p>અને બે પ્રેમિ હાથ, ભેટવાં માટે!</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/11.jpg" /></p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="બ-1">બે</h2>
+<strong>Text:</strong> Carole Bloch<br> <strong>Illustrations:</strong> Richard MacIntosh<br> <strong>Translation:</strong> Darshan Soni<br> <strong>Language:</strong> Gujarati<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/school-clothes'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/two'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
