--- a/stories/index.html
+++ b/stories/index.html
@@ -902,6 +902,12 @@
       <td><a name="gu0098"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0126</td>
+      <td><a href="/stories/gu/0126_વાદળા_slides.html" target="_blank">વાદળા</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="gu0126"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0127</td>
       <td><a href="/stories/gu/0127_વિવિધ-નાતકો_slides.html" target="_blank">વિવિધ નાતકો</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -1911,7 +1917,7 @@
       <td>0126</td>
       <td><a href="http://my.africanstorybook.org/stories/clouds">Clouds</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#nn0126">nn</a>, <a href="#no0126">no</a>, <a href="#zh0126">zh</a></td>
+      <td><a href="#gu0126">gu</a>, <a href="#nn0126">nn</a>, <a href="#no0126">no</a>, <a href="#zh0126">zh</a></td>
     </tr>
     <tr>
       <td>0127</td>
